--- a/project_2/scss/fonts.scss
+++ b/project_2/scss/fonts.scss
@@ -197,8 +197,8 @@
     src: url('../fonts/raleway/raleway-extrabold.eot');
     src: url('../fonts/raleway/raleway-extrabold.eot?#iefix') format('embedded-opentype'),
          url('../fonts/raleway/raleway-extrabold.woff2') format('woff2'),
-         url('../fonts/raleway/raleway-extrabold.woff') format('woff',
-         url('../fonts/raleway/raleway-extrabold.ttf') format('ttf'));
+         url('../fonts/raleway/raleway-extrabold.woff') format('woff'),
+         url('../fonts/raleway/raleway-extrabold.ttf') format('ttf');
     font-weight: 800;
     font-style: normal;
 
