--- a/project_2/css/style.css
+++ b/project_2/css/style.css
@@ -1,3 +1,111 @@
+@font-face {
+  font-family: 'montserrat';
+  src: url("../fonts/montserrat/montserrat-thin.eot");
+  src: url("../fonts/montserrat/montserrat-thin.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat/montserrat-thin.woff2") format("woff2"), url("../fonts/montserrat/montserrat-thin.woff") format("woff"), url("../fonts/montserrat/montserrat-thin.ttf") format("ttf");
+  font-weight: 100;
+  font-style: normal; }
+@font-face {
+  font-family: 'montserrat';
+  src: url("../fonts/montserrat/montserrat-extralight.eot");
+  src: url("../fonts/montserrat/montserrat-extralight.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat/montserrat-extralight.woff2") format("woff2"), url("../fonts/montserrat/montserrat-extralight.woff") format("woff"), url("../fonts/montserrat/montserrat-extralight.ttf") format("ttf");
+  font-weight: 200;
+  font-style: normal; }
+@font-face {
+  font-family: 'montserrat';
+  src: url("../fonts/montserrat/montserrat/montserrat-light.eot");
+  src: url("../fonts/montserrat/montserrat-light.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat/montserrat-light.woff2") format("woff2"), url("../fonts/montserrat/montserrat-light.woff") format("woff"), url("../fonts/montserrat/montserrat-light.ttf") format("ttf");
+  font-weight: 300;
+  font-style: normal; }
+@font-face {
+  font-family: 'montserrat';
+  src: url("../fonts/montserrat/montserrat-regular.eot");
+  src: url("../fonts/montserrat/montserrat-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat/montserrat-regular.woff2") format("woff2"), url("../fonts/montserrat/montserrat-regular.woff") format("woff"), url("../fonts/montserrat/montserrat-regular.ttf") format("ttf");
+  font-weight: 400;
+  font-style: normal; }
+@font-face {
+  font-family: 'montserrat';
+  src: url("../fonts/montserrat/montserrat-medium.eot");
+  src: url("../fonts/montserrat/montserrat-medium.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat/montserrat-medium.woff2") format("woff2"), url("../fonts/montserrat/montserrat-medium.woff") format("woff"), url("../fonts/montserrat/montserrat-medium.ttf") format("ttf");
+  font-weight: 500;
+  font-style: normal; }
+@font-face {
+  font-family: 'montserrat';
+  src: url("../fonts/montserrat/montserrat-semibold.eot");
+  src: url("../fonts/montserrat/montserrat-semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat/montserrat-semibold.woff2") format("woff2"), url("../fonts/montserrat/montserrat-semibold.woff") format("woff"), url("../fonts/montserrat/montserrat-semibold.ttf") format("ttf");
+  font-weight: 600;
+  font-style: normal; }
+@font-face {
+  font-family: 'montserrat';
+  src: url("../fonts/montserrat/montserrat-bold.eot");
+  src: url("../fonts/montserrat/montserrat-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat/montserrat-bold.woff2") format("woff2"), url("../fonts/montserrat/montserrat-bold.woff") format("woff"), url("../fonts/montserrat/montserrat-bold.ttf") format("ttf");
+  font-weight: 700;
+  font-style: normal; }
+@font-face {
+  font-family: 'montserrat';
+  src: url("../fonts/montserrat/montserrat-extrabold.eot");
+  src: url("../fonts/montserrat/montserrat-extrabold.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat/montserrat-extrabold.woff2") format("woff2"), url("../fonts/montserrat/montserrat-extrabold.woff") format("woff"), url("../fonts/montserrat/montserrat-extrabold.ttf") format("ttf");
+  font-weight: 800;
+  font-style: normal; }
+@font-face {
+  font-family: 'montserrat';
+  src: url("../fonts/montserrat/montserrat-black.eot");
+  src: url("../fonts/montserrat/montserrat-black.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat/montserrat-black.woff") format("woff"), url("../fonts/montserrat/montserrat-black.woff2") format("woff2"), url("../fonts/montserrat/montserrat-black.ttf") format("ttf");
+  font-weight: 900;
+  font-style: normal; }
+@font-face {
+  font-family: 'raleway';
+  src: url("../fonts/raleway/raleway-thin.eot");
+  src: url("../fonts/raleway/raleway-thin.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway/raleway-thin.woff2") format("woff2"), url("../fonts/raleway/raleway-thin.woff") format("woff"), url("../fonts/raleway/raleway-thin.ttf") format("ttf");
+  font-weight: 100;
+  font-style: normal; }
+@font-face {
+  font-family: 'raleway';
+  src: url("../fonts/raleway/raleway-extralight.eot");
+  src: url("../fonts/raleway/raleway-extralight.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway/raleway-extralight.woff2") format("woff2"), url("../fonts/raleway/raleway-extralight.woff") format("woff"), url("../fonts/raleway/raleway-extralight.ttf") format("ttf");
+  font-weight: 200;
+  font-style: normal; }
+@font-face {
+  font-family: 'raleway';
+  src: url("../fonts/raleway/raleway-light.eot");
+  src: url("../fonts/raleway/raleway-light.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway/raleway-light.woff2") format("woff2"), url("../fonts/raleway/raleway-light.woff") format("woff"), url("../fonts/raleway/raleway-light.ttf") format("ttf");
+  font-weight: 300;
+  font-style: normal; }
+@font-face {
+  font-family: 'raleway';
+  src: url("../fonts/raleway/raleway-regular.eot");
+  src: url("../fonts/raleway/raleway-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway/raleway-regular.woff2") format("woff2"), url("../fonts/raleway/raleway-regular.woff") format("woff"), url("../fonts/raleway/raleway-regular.ttf") format("ttf");
+  font-weight: 400;
+  font-style: normal; }
+@font-face {
+  font-family: 'raleway';
+  src: url("../fonts/raleway/raleway-medium.eot");
+  src: url("../fonts/raleway/raleway-medium.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway/raleway-medium.woff2") format("woff2"), url("../fonts/raleway/raleway-medium.woff") format("woff"), url("../fonts/raleway/raleway-medium.ttf") format("ttf");
+  font-weight: 500;
+  font-style: normal; }
+@font-face {
+  font-family: 'ralewaysemibold';
+  src: url("../fonts/raleway/raleway-semibold.eot");
+  src: url("../fonts/raleway/raleway-semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway/raleway-semibold.woff2") format("woff2"), url("../fonts/raleway/raleway-semibold.woff") format("woff"), url("../fonts/raleway/raleway-semibold.ttf") format("ttf");
+  font-weight: 600;
+  font-style: normal; }
+@font-face {
+  font-family: 'raleway';
+  src: url("../fonts/raleway/raleway-bold.eot");
+  src: url("../fonts/raleway/raleway-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway/raleway-bold.woff2") format("woff2"), url("../fonts/raleway/raleway-bold.woff") format("woff"), url("../fonts/raleway/raleway-bold.ttf") format("ttf");
+  font-weight: 700;
+  font-style: normal; }
+@font-face {
+  font-family: 'raleway';
+  src: url("../fonts/raleway/raleway-extrabold.eot");
+  src: url("../fonts/raleway/raleway-extrabold.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway/raleway-extrabold.woff2") format("woff2"), url("../fonts/raleway/raleway-extrabold.woff") format("woff", url("../fonts/raleway/raleway-extrabold.ttf") format("ttf"));
+  font-weight: 800;
+  font-style: normal; }
+@font-face {
+  font-family: 'raleway';
+  src: url("../fonts/raleway/raleway-black.eot");
+  src: url("../fonts/raleway/raleway-black.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway/raleway-black.woff2") format("woff2"), url("../fonts/raleway/raleway-black.woff") format("woff", url("../fonts/raleway/raleway-black.ttf") format("ttf"));
+  font-weight: 900;
+  font-style: normal; }
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -309,9 +417,7 @@ template {
 
 body {
   max-width: 1920px;
-  margin: 0 auto;
-  font-family: 'Montserrat', sans-serif;
-  font-family: 'Raleway', sans-serif; }
+  margin: 0 auto; }
 
 .header {
   background-image: url(../img/bg_header.jpg);
@@ -462,5 +568,4 @@ body {
     background-repeat: no-repeat;
     top: -4px;
     left: 0; }
-
 /*# sourceMappingURL=style.css.map */
