Выполнена работа над ошибками

--- a/project_2/scss/style.scss
+++ b/project_2/scss/style.scss
@@ -9,6 +9,10 @@ body{
     max-width: $width;
     margin: 0 auto;
 }
+/*Убрать полосу прокрутки для всей страницы*/
+::-webkit-scrollbar {
+    width: 0;
+  }
 
 @import 'header';
 
