--- a/project_2/css/style.css
+++ b/project_2/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: 'montserrat';
   src: url("../fonts/montserrat/montserrat-thin.eot");
@@ -419,8 +420,13 @@ body {
   max-width: 1920px;
   margin: 0 auto; }
 
+/*Убрать полосу прокрутки для всей страницы*/
+::-webkit-scrollbar {
+  width: 0; }
+
 .header {
   background-image: url(../img/bg_header.jpg);
+  background-position: center;
   background-repeat: no-repeat;
   padding: 40px 0;
   margin: 0 auto;
@@ -482,6 +488,8 @@ body {
         color: #c7b299; }
       .header-menu__menu-link:active {
         color: #ffffff; }
+    .header-menu__form {
+      position: relative; }
   .header-slider {
     margin: 278px 150px 325px 150px;
     display: -webkit-box;
@@ -588,7 +596,7 @@ body {
   border: none;
   outline: none;
   display: block;
-  margin: 0 14px 0 48px; }
+  margin: 0 24px 0 48px; }
 .icon-cart__svg {
   fill: #ffffff; }
   .icon-cart__svg:hover {
@@ -597,25 +605,32 @@ body {
     fill: #ffffff; }
 
 .icon-search {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; }
+  display: block;
+  width: 100%;
+  height: 100%; }
   .icon-search__btn {
     width: 0;
-    padding: 0;
+    padding: 5px;
     border: none;
     outline: none;
     margin: 0 0 0 15px;
-    display: block; }
+    position: absolute;
+    top: 40px;
+    left: -145px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    background-color: transparent; }
     .icon-search__btn:focus {
-      display: block;
-      width: 100px;
+      border: 2px solid #ffffff;
+      background-color: #ffffff;
+      width: 150px;
       -webkit-transition: width 1s ease-in;
       transition: width 1s ease-in; }
       .icon-search__btn:focus + .icon-search__svg {
-        margin: 0 0 0 -24px;
         fill: #c7b299; }
   .icon-search__svg {
+    width: 100%;
+    height: 100%;
     fill: #ffffff; }
     .icon-search__svg:hover {
       fill: #c7b299; }
@@ -790,4 +805,5 @@ body {
       text-transform: uppercase;
       color: #ffffff;
       font-family: raleway; }
+
 /*# sourceMappingURL=style.css.map */
