--- a/project_2/css/style.css
+++ b/project_2/css/style.css
@@ -532,7 +532,7 @@ body {
         display: inline-block;
         -webkit-box-sizing: border-box;
                 box-sizing: border-box;
-        padding: 15px 39px;
+        padding: 13px 39px;
         border-radius: 3px;
         -webkit-box-shadow: inset 0px -3px 0 0 #736357;
                 box-shadow: inset 0px -3px 0 0 #736357;
@@ -540,7 +540,7 @@ body {
         text-decoration: none;
         border: none;
         outline: none;
-        margin: 50px 0 0 0; }
+        margin: 48px 0 0 0; }
         .header-slider-content__btn:hover {
           background-color: #736357; }
         .header-slider-content__btn:active {
@@ -550,7 +550,7 @@ body {
         .header-slider-content__btn-text {
           font-size: 14px;
           font-weight: 700;
-          line-height: 1.64;
+          line-height: 2;
           text-align: center;
           text-transform: uppercase;
           color: #ffffff;
@@ -658,6 +658,8 @@ body {
             align-items: center;
     text-decoration: none;
     margin: 0 25px 0 0; }
+    .services-item:nth-child(4) {
+      margin: 0; }
     .services-item__svg {
       fill: #555555;
       display: block;
@@ -685,7 +687,7 @@ body {
         background-color: #f1eee9;
         -ms-flex-item-align: end;
             align-self: flex-end;
-        margin: 30px auto 0; }
+        margin: 22px auto 0; }
     .services-item:nth-child(1):hover .services-item__svg {
       fill: #c7b299; }
     .services-item:nth-child(1):hover .services-item__title {
@@ -732,7 +734,7 @@ body {
     line-height: 1.75;
     text-align: center;
     color: #8c8c8c;
-    margin: 24px auto 40px auto;
+    margin: 16px auto 34px auto;
     max-width: 770px; }
   .ideas-position {
     height: 482px;
@@ -744,7 +746,7 @@ body {
 .boxes {
   background-image: -webkit-gradient(linear, left bottom, left top, from(#211b19), to(#4e3427));
   background-image: linear-gradient(to top, #211b19, #4e3427);
-  padding: 48px 0; }
+  padding: 43px 0; }
   .boxes-container {
     margin: 0 auto;
     max-width: 1170px;
@@ -769,7 +771,7 @@ body {
       font-family: raleway;
       font-size: 28px;
       color: #ffffff;
-      margin: 0 4px 0 0; }
+      margin: 0 8px 0 0; }
       .boxes-txt-list__item.active {
         color: #c7b299; }
   .boxes-txt__subtitle {
@@ -782,7 +784,7 @@ body {
     display: inline-block;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
-    padding: 15px 39px;
+    padding: 13px 39px;
     border-radius: 3px;
     -webkit-box-shadow: inset 0px -3px 0 0 #736357;
             box-shadow: inset 0px -3px 0 0 #736357;
@@ -790,7 +792,8 @@ body {
     text-decoration: none;
     border: none;
     outline: none;
-    margin: 0; }
+    margin: 5px 0;
+    padding: 8px 28px; }
     .boxes-btn__btn:hover {
       background-color: #736357; }
     .boxes-btn__btn:active {
@@ -800,10 +803,299 @@ body {
     .boxes-btn__btn-text {
       font-size: 14px;
       font-weight: 700;
-      line-height: 1.64;
+      line-height: 2;
       text-align: center;
       text-transform: uppercase;
       color: #ffffff;
       font-family: raleway; }
+
+.project-container {
+  margin: 0 auto;
+  max-width: 1170px;
+  padding: 80px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+.project__title {
+  display: block;
+  font-family: raleway;
+  font-size: 30px;
+  font-weight: 600;
+  text-align: center;
+  color: #555555;
+  margin: 0; }
+.project__subtitle {
+  display: block;
+  max-width: 770px;
+  font-family: montserrat;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.75;
+  text-align: center;
+  color: #8c8c8c;
+  margin: 16px 0; }
+.project-categories {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 17px 0 0 0; }
+  .project-categories__btn {
+    display: block;
+    outline: none;
+    margin: 0 6px;
+    height: 32px;
+    border-radius: 3px;
+    border: solid 1px #ebebeb;
+    background-color: #ffffff;
+    padding: 8px 22px 10px; }
+    .project-categories__btn:hover {
+      background-color: #998675; }
+      .project-categories__btn:hover .project-categories__btn-text {
+        color: #ffffff; }
+    .project-categories__btn:active {
+      background-color: #ffffff; }
+      .project-categories__btn:active .project-categories__btn-text {
+        color: #8c8c8c; }
+  .project-categories__btn-text {
+    display: block;
+    margin: 0;
+    font-family: montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    color: #8c8c8c; }
+.project-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 40px 0 5px 0; }
+  .project-items-item {
+    margin: 0 30px 30px 0;
+    position: relative; }
+    .project-items-item:nth-child(3) {
+      margin: 0 0 30px 0; }
+    .project-items-item:nth-child(6) {
+      margin: 0; }
+    .project-items-item__img {
+      display: block; }
+    .project-items-item__txt {
+      background-color: #fbfaf8;
+      padding: 26px 0 8px 28px;
+      position: relative; }
+      .project-items-item__txt-title {
+        text-decoration: none;
+        font-family: raleway;
+        font-size: 20px;
+        font-weight: 500;
+        color: #c7b299; }
+      .project-items-item__txt-description {
+        font-family: montserrat;
+        font-size: 14px;
+        font-weight: 300;
+        color: #d1d1d1; }
+      .project-items-item__txt::before {
+        content: "";
+        position: absolute;
+        top: -40px;
+        left: 4px;
+        border: 30px solid transparent;
+        border-bottom: 15px solid #fbfaf8; }
+    .project-items-item__btn {
+      display: none;
+      outline: none;
+      border: none;
+      background-color: transparent;
+      position: absolute;
+      top: 106px;
+      left: 144px; }
+      .project-items-item__btn--search {
+        margin: 0 0 0 50px; }
+    .project-items-item:hover .project-items-item__img {
+      -webkit-filter: brightness(60%);
+              filter: brightness(60%); }
+    .project-items-item:hover .project-items-item__txt {
+      background-color: #362f2d; }
+      .project-items-item:hover .project-items-item__txt::before {
+        border-bottom: 15px solid #362f2d; }
+    .project-items-item:hover .project-items-item__txt-title {
+      color: #ffffff; }
+      .project-items-item:hover .project-items-item__txt-title:hover {
+        color: #c7b299; }
+      .project-items-item:hover .project-items-item__txt-title:active {
+        color: #ffffff; }
+    .project-items-item:hover .project-items-item__txt-subtitle {
+      color: #c7b299; }
+    .project-items-item:hover .project-items-item__btn {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
+    .project-items-item:hover .project-items-item__btn-svg {
+      fill: #ffffff; }
+      .project-items-item:hover .project-items-item__btn-svg:hover {
+        fill: #c7b299; }
+      .project-items-item:hover .project-items-item__btn-svg:active {
+        fill: #ffffff; }
+.project__btn {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 13px 39px;
+  border-radius: 3px;
+  -webkit-box-shadow: inset 0px -3px 0 0 #736357;
+          box-shadow: inset 0px -3px 0 0 #736357;
+  background-color: #998675;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  padding: 12px 45px; }
+  .project__btn:hover {
+    background-color: #736357; }
+  .project__btn:active {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    background-color: #998675; }
+  .project__btn-text {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 2;
+    text-align: center;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-family: raleway; }
+
+.video {
+  position: relative; }
+  .video-bg {
+    width: 100%;
+    margin: 0;
+    padding: 0; }
+  .video-description {
+    position: absolute;
+    top: 210px;
+    left: 677px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .video-description__play-btn {
+      outline: none;
+      border-radius: 50%;
+      background-color: rgba(0, 0, 0, 0.2);
+      width: 100px;
+      height: 100px;
+      border: none;
+      padding: 0;
+      margin: 0 0 40px 0; }
+    .video-description__play-svg {
+      fill: #ffffff;
+      display: block;
+      margin: 0 auto; }
+    .video-description__title {
+      display: block;
+      font-family: raleway;
+      font-size: 30px;
+      font-weight: 500;
+      color: #ffffff;
+      margin: 0 0 16px 0; }
+    .video-description__subtitle {
+      max-width: 570px;
+      font-family: montserrat;
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 1.75;
+      text-align: center;
+      color: #ffffff;
+      margin: 0 0 29px 0; }
+    .video-description__play-time {
+      font-family: montserrat;
+      font-size: 14px;
+      line-height: 1.71;
+      color: #c7b299;
+      margin: 0; }
+
+.mobile-devices-container {
+  margin: 0 auto;
+  max-width: 1170px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  background-image: url(../img/iPhone\ in\ hand.jpg);
+  background-repeat: no-repeat;
+  background-position: 49px -3px;
+  padding: 80px 0 0 0;
+  background-origin: content-box; }
+.mobile-devices__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 670px;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  font-family: raleway;
+  font-size: 30px;
+  font-weight: 600;
+  color: #555555;
+  margin: 107px 0 26px 0; }
+.mobile-devices__txt {
+  width: 670px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  font-family: montserrat;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.75;
+  color: #8c8c8c;
+  margin: 0; }
+.mobile-devices-features {
+  width: 570px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 15px 0 180px 0; }
+  .mobile-devices-features__list {
+    padding: 0; }
+  .mobile-devices-features__item {
+    position: relative;
+    list-style-type: none;
+    font-family: montserrat;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 2;
+    color: #8c8c8c; }
+    .mobile-devices-features__item::after {
+      content: "";
+      background-image: url(../img/arrow_devices.svg);
+      display: block;
+      width: 21px;
+      height: 21px;
+      background-size: cover;
+      background-repeat: no-repeat;
+      position: absolute;
+      top: 5px;
+      left: -50px; }
 
 /*# sourceMappingURL=style.css.map */
