Выполнена работа над ошибками

--- a/project_2/css/style.css
+++ b/project_2/css/style.css
@@ -428,7 +428,10 @@ body {
   background-image: url(../img/bg_header.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  padding: 40px 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-size: cover;
+  padding: 42px 0;
   margin: 0 auto;
   background-clip: border-box; }
   .header-header {
@@ -670,7 +673,7 @@ body {
       font-size: 22px;
       font-weight: 600;
       color: #555555;
-      margin: 30px 0 19px 0; }
+      margin: 27px 0 16px 0; }
     .services-item__subtitle {
       margin: 0 0 0 0;
       font-family: montserrat;
@@ -746,7 +749,7 @@ body {
 .boxes {
   background-image: -webkit-gradient(linear, left bottom, left top, from(#211b19), to(#4e3427));
   background-image: linear-gradient(to top, #211b19, #4e3427);
-  padding: 43px 0; }
+  padding: 45px 0; }
   .boxes-container {
     margin: 0 auto;
     max-width: 1170px;
@@ -812,7 +815,7 @@ body {
 .project-container {
   margin: 0 auto;
   max-width: 1170px;
-  padding: 80px 0;
+  padding: 78px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -845,7 +848,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 17px 0 0 0; }
+  margin: 19px 0 0 0; }
   .project-categories__btn {
     display: block;
     outline: none;
@@ -1000,6 +1003,10 @@ body {
       border: none;
       padding: 0;
       margin: 0 0 40px 0; }
+      .video-description__play-btn:hover {
+        background-color: #c7b299; }
+      .video-description__play-btn:active {
+        background-color: rgba(0, 0, 0, 0.2); }
     .video-description__play-svg {
       fill: #ffffff;
       display: block;
