--- a/project_2/scss/header.scss
+++ b/project_2/scss/header.scss
@@ -5,7 +5,9 @@
     background-image: url(../img/bg_header.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    padding: 40px 0;
+    box-sizing: border-box;
+    background-size: cover; 
+    padding: 42px 0;
     margin: 0 auto;
     background-clip: border-box;
 
