--- a/project_2/scss/video.scss
+++ b/project_2/scss/video.scss
@@ -24,6 +24,12 @@
                 border: none;
                 padding: 0;
                 margin: 0 0 40px 0;
+            &:hover{
+                background-color: $colorGold;
+            }
+            &:active{
+                background-color: rgba(0, 0, 0, 0.2);
+            }
         }
         &__play-svg{
             fill: #ffffff;
