--- a/project_2/scss/fonts.scss
+++ b/project_2/scss/fonts.scss
@@ -216,3 +216,15 @@
 
 }
 
+@font-face {
+    font-family: 'roboto';
+    src: url('../fonts/roboto/roboto-regular.eot');
+    src: url('../fonts/roboto/roboto-regular.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/roboto/roboto-regular.woff2') format('woff2'),
+         url('../fonts/roboto/roboto-regular.woff') format('woff'),
+         url('../fonts/roboto/roboto-regular.ttf') format('ttf');
+    font-weight: 400;
+    font-style: normal;
+
+}
+
