--- a/project_2/scss/mixins.scss
+++ b/project_2/scss/mixins.scss
@@ -33,3 +33,12 @@
         }
     
 }
+
+@mixin title-footer{
+    margin: 26px 0 0 0;
+    display: block;
+    font-family: Raleway;
+    font-size: 24px;
+    font-weight: 700;
+    color: $colorWhite
+}
