--- a/project_2/scss/project.scss
+++ b/project_2/scss/project.scss
@@ -4,7 +4,7 @@
 .project{
     &-container{
         @include container;
-        padding: 78px 0;
+        padding: 78px 0 78px 0;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -31,7 +31,7 @@
     }
     &-categories{
         display: flex;
-        margin: 19px 0 0 0;
+        margin: 17px 0 0 0;
         &__btn{
             display: block;
             outline: none;
@@ -68,9 +68,9 @@
     &-items{
         display: flex;
         flex-wrap: wrap;
-        margin: 40px 0 5px 0;
+        margin: 40px 0 11px 0;
         &-item{
-            margin: 0 30px 30px 0;
+            margin: 0 30px 32px 0;
             position: relative;
             &:nth-child(3){
                 margin: 0 0 30px 0;
@@ -83,7 +83,7 @@
             }
             &__txt{
                 background-color: #fbfaf8;
-                padding: 26px 0 8px 28px;
+                padding: 26px 0 26px 28px;
                 position: relative;
                 &-title{
                     text-decoration: none;
@@ -93,10 +93,12 @@
                     color: #c7b299;
                 }
                 &-description{
+                    display: block;
                     font-family: montserrat;
                     font-size: 14px;
                     font-weight: 300;
                     color: #d1d1d1;
+                    margin: 6px 0 0 0;
                 }
                 &::before{
                     content: "";
@@ -121,7 +123,7 @@
             }
             &:hover{
                 .project-items-item__img{
-                    filter: brightness(60%);
+                    filter: brightness(40%);
                 }
                 .project-items-item__txt{
                     background-color: #362f2d;
