--- a/project_2/scss/info.scss
+++ b/project_2/scss/info.scss
@@ -189,6 +189,12 @@
                 &:nth-child(4){
                     margin: 0;
                 }
+                &:hover{
+                    transform: scale(1.05);
+                }
+                &:active{
+                    transform: none;
+                }
                 
             }
             &__img{
