--- a/project_2/scss/partners.scss
+++ b/project_2/scss/partners.scss
@@ -14,6 +14,16 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        
+    }
+    &__link{
+        display: block;
+        &:hover{
+            transform: scale(1.05);
+        }
+        &:active{
+            transform: none;
+        }
     }
 
 }
