--- a/project_2/scss/style.scss
+++ b/project_2/scss/style.scss
@@ -1,18 +1,15 @@
-@import 'variables';
+@import '_variables';
 
-@import 'fonts';
+@import '_fonts';
 
-@import 'normalize';
+@import '_normalize';
 
 
 body{
     max-width: $width;
     margin: 0 auto;
 }
-/*Убрать полосу прокрутки для всей страницы*/
-::-webkit-scrollbar {
-    width: 0;
-  }
+
 
 @import 'header';
 
