--- a/project_2/scss/_variables.scss
+++ b/project_2/scss/_variables.scss
@@ -1,4 +1,6 @@
 $width: 1920px;
 $widthContainer: 1170px;
+$bgsIdeas: (770px / $widthContainer) * 100%;
 $colorWhite: #ffffff;
 $colorGold: #c7b299;
+
