--- a/project_2/scss/project.scss
+++ b/project_2/scss/project.scss
@@ -163,3 +163,9 @@
         padding: 12px 45px;
     }
 }
+
+@media (min-width: 320px) and (max-width: 480px){
+    .project{
+        display: none;
+    }
+}
