--- a/project_2/scss/copyright.scss
+++ b/project_2/scss/copyright.scss
@@ -49,3 +49,10 @@
         }
     }
 }
+
+
+@media (min-width: 320px) and (max-width: 480px){
+    .footer-copyright{
+        display: none;
+    }
+}
