--- a/project_2/scss/header.scss
+++ b/project_2/scss/header.scss
@@ -85,6 +85,9 @@
         &__form{
             position: relative;
         }
+        &__checkbox , &__label {
+            display: none;
+        }
     }
 
     &-slider {
@@ -236,8 +239,6 @@
         }
     }
     &__svg{
-        width: 100%;
-        height: 100%;
         fill: $colorWhite;
         &:hover{
             fill: $colorGold;
@@ -245,3 +246,37 @@
     }
 
 }
+
+@media (min-width: 320px) and (max-width: 480px){
+
+    .header{
+        padding: 40px 30px;
+        &-header{
+            flex-wrap: wrap;
+        }
+        &-menu{
+            margin-top: -42px;
+            width: 100%;
+            flex-wrap: wrap;
+            justify-content: flex-end;
+            &__menu-list{
+                height: 0;
+                visibility: hidden;
+                margin: 0 auto;
+                width: 100%;
+                flex-direction: column;
+            }
+            &__form, &__icon{
+                display: none;
+            }
+            @include checkbox;
+        }
+        &-slider, &-pagination{
+            display: none;
+        }
+    }
+
+
+}
+
+
