--- a/project_2/scss/copyright.scss
+++ b/project_2/scss/copyright.scss
@@ -53,6 +53,16 @@
 
 @media (min-width: 320px) and (max-width: 480px){
     .footer-copyright{
-        display: none;
+        &-container{
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 39px 20px;
+        }
+        &__grup-left{
+            margin-bottom: 30px;
+        }
+        &__text{
+            font-size: 10px;
+        }
     }
 }
