--- a/project_2/scss/services.scss
+++ b/project_2/scss/services.scss
@@ -90,6 +90,20 @@
 
 @media (min-width: 320px) and (max-width: 480px){
     .services{
-        display: none;
+        flex-wrap: wrap;
+        padding: 20px 20px 0;
+        &-item{
+            margin: 0 0 30px 0;
+            max-width: 45%;
+            &__title{
+                font-size: 20px;
+            }
+            &__subtitle{
+                font-size: 12px;
+            }
+            &:nth-child(4){
+                margin: 0 0 30px;
+            }
+        }
     }
 }
