Мобильная версия готова

--- a/project_2/scss/copyright.scss
+++ b/project_2/scss/copyright.scss
@@ -64,5 +64,12 @@
         &__text{
             font-size: 10px;
         }
+        &__link{
+            font-size: 10px;
+            &--grey{
+                margin-left: 5px;
+                padding-left: 5px;
+            }
+        }
     }
 }
