--- a/project_2/css/style.css
+++ b/project_2/css/style.css
@@ -806,7 +806,8 @@ body {
       margin: 0 0 30px 0;
       max-width: 45%; }
       .services-item__title {
-        font-size: 20px; }
+        font-size: 19px;
+        text-align: center; }
       .services-item__subtitle {
         font-size: 12px; }
       .services-item:nth-child(4) {
@@ -1101,7 +1102,12 @@ body {
         -ms-flex-pack: center;
             justify-content: center; }
     .project-items-item {
-      margin: 0 0 32px 0; } }
+      margin: 0 0 32px 0; }
+      .project-items-item__img {
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+        height: auto;
+        width: 100%; } }
 .video {
   position: relative; }
   .video-bg {
@@ -1170,7 +1176,15 @@ body {
 @media (min-width: 320px) and (max-width: 480px) {
   .video-bg {
     -o-object-fit: none;
-       object-fit: none; } }
+       object-fit: none; }
+  .video-description {
+    left: 0;
+    right: 0;
+    margin: 20px; }
+    .video-description__title {
+      font-size: 26px; }
+    .video-description__subtitle {
+      font-size: 13px; } }
 .mobile-devices-container {
   margin: 0 auto;
   max-width: 1170px;
@@ -1246,7 +1260,7 @@ body {
   .mobile-devices-container {
     padding: 30px 20px;
     background-position: left bottom;
-    background-size: 46%; }
+    background-size: 50% auto; }
   .mobile-devices__title {
     margin: 0;
     width: 100%;
@@ -1482,7 +1496,7 @@ body {
         margin: 0 0 10px 0; }
       .posts-post__item-img {
         width: 100%;
-        min-height: 100%; }
+        height: auto; }
     .posts-post__btn {
       display: none; } }
 .partners {
@@ -1768,6 +1782,11 @@ body {
   .footer-copyright__grup-left {
     margin-bottom: 30px; }
   .footer-copyright__text {
-    font-size: 10px; } }
+    font-size: 10px; }
+  .footer-copyright__link {
+    font-size: 10px; }
+    .footer-copyright__link--grey {
+      margin-left: 5px;
+      padding-left: 5px; } }
 
 /*# sourceMappingURL=style.css.map */
