--- a/project_2/scss/mobile-devices.scss
+++ b/project_2/scss/mobile-devices.scss
@@ -71,7 +71,7 @@
         &-container{
             padding: 30px 20px;
             background-position: left bottom;
-            background-size: 46%;
+            background-size: 50% auto;
         }
         &__title{
             margin: 0;
