--- a/project_2/scss/posts.scss
+++ b/project_2/scss/posts.scss
@@ -186,7 +186,7 @@
                 }
                 &-img{
                     width: 100%;
-                    min-height: 100%;
+                    height: auto;
                 }
             }
             &__btn{
