--- a/project_2/scss/project.scss
+++ b/project_2/scss/project.scss
@@ -188,6 +188,11 @@
             justify-content: center;
             &-item{
                 margin: 0 0 32px 0;
+                &__img{
+                    box-sizing: border-box;
+                    height: auto;
+                    width: 100%;
+                }
             }
         }
         
