--- a/project_2/scss/services.scss
+++ b/project_2/scss/services.scss
@@ -96,7 +96,8 @@
             margin: 0 0 30px 0;
             max-width: 45%;
             &__title{
-                font-size: 20px;
+                font-size: 19px;
+                text-align: center;
             }
             &__subtitle{
                 font-size: 12px;
