--- a/project_2/scss/_media.scss
+++ b/project_2/scss/_media.scss
@@ -133,6 +133,7 @@
             background-size: 50% auto;
         }
         &__title{
+            text-align: center;
             margin: 0;
             width: 100%;
             display: block;
