--- a/project_2/css/style.css
+++ b/project_2/css/style.css
@@ -1572,7 +1572,7 @@ body {
       .footer-copyright__link--grey:active {
         color: #555555; }
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media (min-width: 420px) and (max-width: 576px) {
   .header {
     padding: 40px 30px; }
     .header-header {
@@ -1717,8 +1717,9 @@ body {
 
   .mobile-devices-container {
     padding: 30px 20px;
-    background-position: left bottom;
-    background-size: 50% auto; }
+    background-position: left 20px bottom;
+    background-size: 46% auto;
+    background-origin: border-box; }
   .mobile-devices__title {
     text-align: center;
     margin: 0;
@@ -1731,8 +1732,7 @@ body {
     font-size: 14px;
     margin: 17px 0; }
   .mobile-devices-features {
-    width: 50%;
-    margin: 0px 0 30% 0; }
+    width: 46%; }
     .mobile-devices-features__item {
       font-size: 10px; }
       .mobile-devices-features__item::after {
