--- a/project_2/css/style.css
+++ b/project_2/css/style.css
@@ -1647,10 +1647,13 @@ body {
       .header-menu__label {
         display: block; }
       .header-menu__checkbox:checked ~ .header-menu__menu-list {
+        width: 100%;
         height: auto;
+        text-align: center;
         visibility: visible;
         margin-top: 15px;
-        text-align: center; }
+        -webkit-transition: all 1s;
+        transition: all 1s; }
     .header-slider, .header-pagination {
       display: none; }
 
