--- a/project_2/css/style.css
+++ b/project_2/css/style.css
@@ -1572,7 +1572,7 @@ body {
       .footer-copyright__link--grey:active {
         color: #555555; }
 
-@media (min-width: 420px) and (max-width: 576px) {
+@media (max-width: 576px) {
   .header {
     padding: 40px 30px; }
     .header-header {
